--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-BaseUrl= "http://zhanhao.xyz/"
+BaseUrl= "http://52.79.98.58/"
 LanguageCode= "zh-CN"
 Title= "测试博客"
 paginate = 5
@@ -15,7 +15,7 @@ hasCJKLanguage = true
   cover = "images/cover.jpg"
   author = "Zhanhao"
   authorlocation = "Guangzhou, China"
-  authorwebsite = "http://zhanhao.xyz/"
+  authorwebsite = "http://52.79.98.58/"
   bio= "my bio"
   logo = "images/logo.png"
   #googleAnalyticsUserID = "UA-79101-12"
@@ -30,7 +30,7 @@ hasCJKLanguage = true
 
 
   [permalinks]
-  post = "/:slug/"
+  post = "/:year/:month/:title/"
 
 [[menu.main]]
   name = "Blog"
@@ -42,20 +42,7 @@ hasCJKLanguage = true
   name = "Github repos"
   weight = 100
   pre = "<h3>Follow me</h3>"
-  url = "https://github.com/vjeantet"
+  url = "https://github.com/shihuihzh"
 
-[[menu.main]]
-  name = "Twitter timeline"
-  weight = 101
-  url = "https://twitter.com/vjeantet"
 
-[[menu.main]]
-  name = "Flipboard magazines"
-  weight = 102
-  url = "https://flipboard.com/@vjeantet"
 
-[[menu.main]]
-  name = "Keybase (secure msg)"
-  weight = 109
-  pre = "<h3>Contact me</h3>"
-  url = "https://Keybase.io/vjeantet"
