--- a/blog/config.toml
+++ b/blog/config.toml
@@ -23,7 +23,7 @@ hasCJKLanguage = true
   githubName = "shihuihzh"
   # twitterName = "vjeantet"
   # facebookName = ""
-  linkedinName = "shihuihzh"
+  linkedinName = "展豪-黄-176025ba"
   # set true if you are not proud of using Hugo (true will hide the footer note "Proudly published with HUGO.....")
   hideHUGOSupport = false
 
